load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball", "oci_image_index")

load("@bazel_gazelle//:def.bzl", "gazelle")
gazelle(name = "gazelle")

pkg_tar(
    name = "certs_bundle",
    srcs = [
        "//certs:server.crt",
        "//certs:server.key",
        "//certs:tls-ca-chain.pem",      
    ],
    package_dir = "/certs",
)

go_library(
    name = "go_default_library",
    srcs = ["server.go"],   
    importpath = "github.com/salrashid123/threshold/sign/server",
    visibility = ["//visibility:private"],
    deps = [
        "//common:go_default_library",
        "@com_github_salrashid123_confidential_space_claims//:go_default_library",
        "@com_github_salrashid123_confidential_space_misc_testtoken//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@ch_dedis_go_kyber_v4//sign/bdn:go_default_library",
        "@ch_dedis_go_kyber_v4//sign/tbls:go_default_library",
        "@com_github_golang_glog//:go_default_library",                
        "@org_golang_x_net//http2:go_default_library",        
        "@com_github_hashicorp_golang_lru_v2//:go_default_library",
        "@com_github_golang_jwt_jwt_v5//:go_default_library",
        "@com_github_google_uuid//:go_default_library",   
        "@com_github_lestrrat_go_jwx//jwk:go_default_library",              
        "@org_golang_x_net//context:go_default_library", 
        "@ch_dedis_go_kyber_v4//share:go_default_library", 
        "@ch_dedis_go_kyber_v4//pairing/bn256:go_default_library", 
        "@ch_dedis_go_fixbuf//:go_default_library", 
    ],
)

go_binary(
    name = "main",
    out = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goos = "linux", 
    goarch = "amd64",    
)


pkg_tar(
    name = "app-tar",
    srcs = [":main"],
    package_dir = "/",
)

oci_image(
    name = "server-image",
    base = "@distroless_base",
    tars = [":certs_bundle", ":app-tar"],   
    entrypoint = ["/server"],
    cmd = [],
    env = {},
    labels = {
        "tee.launch_policy.allow_cmd_override": "false",
        "tee.launch_policy.log_redirect": "always",        
    },     
    exposed_ports = [
        "8081/tcp",
    ],    
)

oci_tarball(
    name = "tar-docker",
    image = "server-image",
    format = "docker",
    repo_tags = ["localhost:4000/sign-server"],
    #repo_tags = ["docker.io/salrashid123/sign-server"],    
    #repo_tags = ["us-central1-docker.pkg.dev/$PROJECT_ID/sign-repo/sign-server"],          
)

oci_image_index(
    name = "app-index",
    images = [
        ":server-image",
    ]
)

oci_tarball(
    name = "tar-oci-index",
    image = ":app-index",
    format = "oci",
    repo_tags = ["localhost:4000/sign-server"],
    #repo_tags = ["docker.io/salrashid123/sign-server"],    
    #repo_tags = ["us-central1-docker.pkg.dev/$PROJECT_ID/sign-repo/sign-server"],        
)

oci_push(
    name = "push-image",
    image = ":server-image",
    repository = "localhost:4000/sign-server",
    #repository = "docker.io/salrashid123/sign-server",        
    #repository = ["us-central1-docker.pkg.dev/$PROJECT_ID/sign-repo/sign-server"],    
    remote_tags = ["server"]
)